Align progress endpoints and restore original list access